[package]
name = "rtmp_gst_webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = { version = "0.19", default-features = false, features = ["log"] }
gstreamer = { version = "0.22", default-features = false }
cocoa = "0.25.0"
objc = "0.2.7"

